--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "app-list",
   "version": "1.0.0",
   "description": "",
-  "main": "App.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node App.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
